# PimaJTED---School-Class-Work

./: 03-19-2024_Group_Operational_Rock_Paper_Scissors.py  03-19-2024_Group_Operational_Rock_Paper_Scissors_scores.csv  04-030-2024_D2L-Yum-Yum.py  04-09-2024_Operational_Assignment_NMAP.py  BZR.py  pyproject.toml  replit.nix
D2L_Projects/: 04-030-2024_D2L-Yum-Yum.py  05-01-2024_D2L_Bottle_Return_Assignment.py  05-01-2024_D2L_Dice_Game_Assignment.py  05-01-2024_D2L_Theater_Seatings_Assignment.py  05-02-2024_D2L_Code_Debugging_Arrays.py  05-04-2024_D2L_Classes_Pets.py  05-04-2024_D2L_Green_Assignment.py  05-10-2024_D2L_Final.py
D2L_Projects/D2L 2024 Final/__pycache__/: 05-10-2024_D2L_Final.py  patients.py  procedures.py
PimaJTED_Year1_Projects/: 04-09-2024_Operational_Assignment_NMAP.py
PimaJTED_Year1_Projects/Group_Projects/: 01-23-2024_number_guess_revised.py
