[tool.poetry]
name = "pimajted-school-class-work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pimajted_school_class_work"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.40.1"
tensorflow = "2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
